--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <body>
     <div id="app" style="image-rendering: pixelated;"></div>
     <div id="tooltip" class="tooltip"></div>
+    <div id="settings-modal-container"></div>
     <div id="game-over-screen" class="game-over-overlay">
         <div class="game-over-box">
             <h2>Run Failed</h2>
